<resources>
    <string name="app_name">WSM</string>
    <string name="locate">en</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="more_info">More Info</string>
    <string name="choose">Choose</string>
    <string name="clear">Clear</string>
    <string name="profile">PROFILE</string>
    <string name="personal_information">Personal information</string>
    <string name="setup_profile">Set up profile</string>
    <string name="personal_data">PERSONAL DATA</string>
    <string name="working_calendar">Working calendar</string>
    <string name="holiday_calendar">Holiday calendar</string>
    <string name="personal_request">PERSONAL REQUESTS</string>
    <string name="request_overtime">Overtime</string>
    <string name="leave">Leave</string>
    <string name="other">Others</string>
    <string name="workspaces_data">WORKSPACES DATA</string>
    <string name="workspaces">Workspaces data</string>
    <string name="statistics_of_personal">Statistics of personal</string>
    <string name="manage_requests">MEMBER\'S REQUESTS</string>
    <string name="manage_request_overtime">Overtime request</string>
    <string name="manage_request_others">Others request</string>
    <string name="manage_request_leave">Leave request</string>
    <string name="create_request_ot">Create Overtime Request</string>
    <string name="create_request_leave">Create Leave Request</string>
    <string name="create_others_request">Create Others Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="is_empty">Empty, please enter!</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="least_6_characters">Please enter at least 6 characters!</string>
    <string name="confirm_password_does_not_match">Confirm password does not match!</string>
    <string name="can_not_edit_group">Can not change Group!</string>
    <string name="none" translatable="false"/>
    <string name="other_requests">Other Requests</string>
    <string name="day_off_ro">Ro</string>
    <string name="day_off_half_ro">Ro/2</string>
    <string name="day_off_p">P</string>
    <string name="day_off_half_p">P/2</string>
    <string name="time_in">Time in: %s</string>
    <string name="time_out">Time out: %s</string>
    <string name="employee_name">Employee name</string>
    <string name="employee_code">Employee code</string>
    <string name="project_name">Project name</string>
    <string name="position_name">Position name</string>
    <string name="branch">Branch</string>
    <string name="group">Group</string>
    <string name="contract_date">Contract date</string>
    <string name="start_probation_date">Start probation date</string>
    <string name="end_probation_date">End probation date</string>
    <string name="staff_type">Staff type</string>
    <string name="position">Position</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="off_have_salary_company_pay">Off have salary - Company Pay</string>
    <string name="off_have_salary">Off have salary</string>
    <string name="paid_day_off">Paid day off</string>
    <string name="unpaid_day_off">Unpaid day off</string>
    <string name="number_day_off">Number of day off</string>
    <string name="off_no_salary">Off no salary</string>
    <string name="you_are_unauthorized_to_access">You are unauthorized to access!</string>
    <string name="off_type">Off type</string>
    <string name="annual_leave">Annual leave (%s days)</string>
    <string name="leave_for_marriage">Leave for marriage (%s days)</string>
    <string name="leave_for_child_marriage">Leave for child\'s marriage (%s days)</string>
    <string name="funeral_leave">Funeral leave (%s days)</string>
    <string name="leave_for_care_of_sick_child">Leave for care of sick child (%s days)</string>
    <string name="pregnancy_examination_leave">Pregnancy examination leave (%s days)</string>
    <string name="sick_leave">Sick leave (%s days)</string>
    <string name="miscarriage_leave">Miscarriage leave (%s days)</string>
    <string name="maternity_leave">Maternity leave (%s days)</string>
    <string name="wife_labor_leave">Wife’s labor leave (%s days)</string>
    <string name="annual_leave_detail">Annual leave</string>
    <string name="leave_for_marriage_detail">Leave for marriage</string>
    <string name="leave_for_child_marriage_detail">Leave for child\'s marriage</string>
    <string name="funeral_leave_detail">Funeral leave</string>
    <string name="leave_for_care_of_sick_child_detail">Leave for care of sick child</string>
    <string name="pregnancy_examination_leave_detail">Pregnancy examination leave</string>
    <string name="sick_leave_detail">Sick leave</string>
    <string name="miscarriage_leave_detail">Miscarriage leave</string>
    <string name="maternity_leave_detail">Maternity leave</string>
    <string name="wife_labor_leave_detail">Wife’s labor leave</string>
    <string name="company_pay">Company Pay</string>
    <string name="insurance_coverage">Insurance Coverage</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="reason">Reason</string>
    <string name="create">Create</string>
    <string name="created_at">Created at</string>
    <string name="confirm_create">Confirm create</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="forwarded">Forwarded</string>
    <string name="canceld">Canceled</string>
    <string name="leave_type">Leave type</string>
    <string name="compensation_time">Compensation time</string>
    <string name="example_time_from">Ex: 2017/05/20 17:30</string>
    <string name="example_time_to">Ex: 2017/05/20 18:30</string>
    <string name="confirm_others_request">Confirm request</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="status">Status</string>
    <string name="all">All</string>
    <string name="month">Month</string>
    <string name="date">Date:</string>
    <string name="date_of_creation">Date of creation:</string>
    <string name="day_session">Day session</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="time_request">Time request:</string>
    <string name="request_ot">Request OverTime</string>
    <string name="confirm_request_overtime">Confirm Request OverTime</string>
    <string name="request_off">Request Off</string>
    <string name="confirm_request_leave">Confirm request leave</string>
    <string name="note">Note: \u0020</string>
    <string name="am_pm">Morning: AM - AM;  Afternoon: PM - PM;  All day: AM - PM</string>
    <string name="off_have_salary_from">Off have salary from</string>
    <string name="off_have_salary_to">Off have salary to</string>
    <string name="off_no_salary_from">Off no salary from</string>
    <string name="off_no_salary_to">Off no salary to</string>
    <string name="off_have_salary_insurance_coverage">Off have salary - Insurance coverage</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="being_handled_by">Being handled by</string>
    <string name="confirm_edit_request_overtime">Confirm edit request overtime</string>
    <string name="confirm_edit_request_leave">Confirm edit request leave</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="default_group_and_workspace">Default group and workspace</string>
    <string name="default_group">Group</string>
    <string name="default_workspace">Workspace</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="receive_notification">Receive notification if there is any activities (On/Off ALL)</string>
    <string name="notification_list">Notification list of staff in speical type</string>
    <string name="notification_Change_workspace">Notification Change workspace</string>
    <string name="notification_Change_group">Notification Change group</string>
    <string name="update">Update</string>
    <string name="receive_notification_or_email">Receive Notification or Email</string>
    <string name="edit_request_overtime">Edit request overtime</string>
    <string name="type_leave">Leave type:</string>
    <string name="statu">Status:</string>
    <string name="close">Close</string>
    <string name="request_information">Request information</string>
    <string name="leave_type_in_late_m">In late (M)</string>
    <string name="title_in_late_m">Check in morning time</string>
    <string name="exmple_in_late_m">Ex: 2017/05/20 08:45</string>
    <string name="title_in_late_a">Check in afternoon  time</string>
    <string name="exmple_in_late_a">Ex: 2017/05/20 13:45</string>
    <string name="title_leave_early_m">Check out time</string>
    <string name="exmple_leave_early_m">Ex: 2017/05/20 10:45</string>
    <string name="title_leave_early_a">Check out time</string>
    <string name="exmple_leave_early_a">Ex: 2017/05/20 15:45</string>
    <string name="title_leave_out_from">From</string>
    <string name="exmple_leave_out_from">Ex: 2017/05/20 08:30</string>
    <string name="title_leave_out_to">To</string>
    <string name="exmple_leave_out_to">Ex: 2017/05/20 09:30</string>
    <string name="title_forgot_in">Check in time</string>
    <string name="exmple_forgot_in">Ex: 2017/05/20 08:45</string>
    <string name="title_forgot_out">Check out time</string>
    <string name="exmple_forgot_out">Ex: 2017/05/20 15:45</string>
    <string name="time_request_overtime_invalid">Time request overtime invalid: It is not in time period request overtime</string>
    <string name="end_time_is_less_than_start_time">End time is less than start time</string>
    <string name="you_have_to_choose_the_from_time_first">  You have to choose the from time first</string>
    <string name="the_working_time_dose_not_fit_to_the_request">The working time dose not fit to the request</string>
    <string name="form_overdue">Form overdue</string>
    <string name="this_is_form_request_late_time_in_is_incorrect">This is form request late, time in is incorrect!</string>
    <string name="your_amount_tim_can_not_greater_than_max_allow_time">Your amount time can not greater than max allow time </string>
    <string name="check_in_time_must_be_in_morning_shift">Check in time must be in morning shift</string>
    <string name="check_in_time_must_be_in_afternoon_shift">Check in time must be in afternoon shift</string>
    <string name="check_out_time_must_be_in_morning_shift">Check out time must be in morning shift</string>
    <string name="check_out_time_must_be_in_afternoon_shift">Check out time must be in afternoon shift</string>
    <string name="time_into_company_illegal">Time into company Illegal</string>
</resources>