<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.wsm.screen.requestovertime.RequestOvertimeViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            >
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="@dimen/dp_10"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                >
                <android.support.design.widget.TextInputLayout
                    style="@style/StyleTextHint"
                    >
                    <EditText
                        android:enabled="false"
                        android:hint="@string/employee_name"
                        android:text="@={viewModel.user.name}"
                        style="@style/StyleText"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/StyleTextHint"
                    >
                    <EditText
                        android:enabled="false"
                        android:hint="@string/employee_code"
                        android:text="@={viewModel.user.code}"
                        style="@style/StyleText"
                        />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >
                        <android.support.design.widget.TextInputLayout
                            style="@style/StyleTextHint"
                            >
                            <EditText
                                android:hint="@string/branch"
                                android:text="@{viewModel.request.branch.branchName}"
                                style="@style/StyleText"
                                />
                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            tools:ignore="ContentDescription"
                            style="@style/StyleImageDropDown"
                            />
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >
                        <android.support.design.widget.TextInputLayout
                            style="@style/StyleTextHint"
                            >
                            <EditText
                                android:hint="@string/group"
                                android:text="@{viewModel.request.group.groupName}"
                                style="@style/StyleText"
                                />
                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            tools:ignore="ContentDescription"
                            style="@style/StyleImageDropDown"
                            />
                    </FrameLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    style="@style/StyleTextHint"
                    >
                    <EditText
                        android:hint="@string/project_name"
                        android:text="@={viewModel.request.project}"
                        style="@style/StyleEditableText"
                        />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        style="@style/StyleTextHint"
                        >
                        <EditText
                            android:hint="@string/from"
                            android:text="@={viewModel.request.fromTime}"
                            style="@style/StyleText"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        style="@style/StyleTextHint"
                        >
                        <EditText
                            android:hint="@string/to"
                            android:text="@={viewModel.request.toTime}"
                            style="@style/StyleText"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/StyleTextHint"
                    >
                    <EditText
                        android:hint="@string/reason"
                        android:text="@={viewModel.request.reason}"
                        style="@style/StyleEditableText"
                        />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:onClick="@{viewModel::onClickCreate}"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    style="@style/StyleButton"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
