<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.wsm.screen.requestleave.RequestLeaveViewModel"
            />
        <import type="android.view.View"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="@{viewModel.visibleLayoutCheckin ? View.VISIBLE : View.GONE}"
                >
                <TextView
                    android:text="@{viewModel.titleLeaveInType}"
                    style="@style/StyleTitle"
                    />
                <TextView
                    android:text="@{viewModel.exampleLeaveInType}"
                    style="@style/StyleTitleExample"
                    />
                <EditText
                    android:text="@={viewModel.request.checkinTime}"
                    android:hint="@string/select_time"
                    style="@style/StyleText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="@{viewModel.visibleLayoutCheckout ? View.VISIBLE : View.GONE}"
                >
                <TextView
                    android:text="@{viewModel.titleLeaveOutType}"
                    style="@style/StyleTitle"
                    />
                <TextView
                    android:text="@{viewModel.exampleLeaveOutType}"
                    style="@style/StyleTitleExample"
                    />
                <EditText
                    android:text="@={viewModel.request.checkoutTime}"
                    android:hint="@string/select_time"
                    style="@style/StyleText"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.visibleLayoutCompensation ? View.VISIBLE : View.GONE}"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_marginStart="@dimen/dp_3"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/compensation_time"
                android:textColor="@color/color_black_transparent"
                android:textSize="@dimen/sp_18"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/from"
                        style="@style/StyleTitle"
                        />
                    <TextView
                        android:text="@string/example_time_from"
                        style="@style/StyleTitleExample"
                        />
                    <EditText
                        android:text="@={viewModel.request.compensation.fromTime}"
                        android:hint="@string/select_time"
                        style="@style/StyleText"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/to"
                        style="@style/StyleTitle"
                        />
                    <TextView
                        android:text="@string/example_time_to"
                        style="@style/StyleTitleExample"
                        />
                    <EditText
                        android:text="@={viewModel.request.compensation.toTime}"
                        android:hint="@string/select_time"
                        style="@style/StyleText"
                        />
                </LinearLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/StyleTextHint"
                >
                <EditText
                    android:text="@={viewModel.request.reason}"
                    android:hint="@string/reason"
                    style="@style/StyleEditableText"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
